force-app/main/default/objects/Field_Change__c/fields/Actual_User__c.field-meta.xml
<CustomField>
    <fullName>Actual_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actual User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Field_Changes1</relationshipName>
    <type>Lookup</type>
</CustomField>