force-app/main/default/objects/Field_Change__c/fields/Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logged In User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Field_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>