force-app/main/default/objects/Field_Change__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Field Changes</relationshipLabel>
    <relationshipName>Field_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>